# agent-nexus

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 202603060001_create_app_control_plane_tables.py  202603080001_add_run_delegation_tables.py  202603080002_add_delegation_context_json.py  202603130001_add_run_step_metadata_json.py  202603160001_add_run_metadata_json.py
config/: .env.example
docker/: Caddyfile  Dockerfile.bot  Dockerfile.frontend  Dockerfile.sandbox  Dockerfile.sandbox.step  docker-compose.host-socket.yml  docker-compose.prod.yml  docker-compose.yml
docs/: production-deployment.md  testing.md
docs/plans/: 2026-02-20-curiosity-driven-autonomy-design.md  2026-02-20-curiosity-driven-autonomy.md  2026-02-22-monorepo-integration-design.md  2026-02-22-monorepo-integration-plan.md  2026-03-08-incremental-autonomy-delegation-design.md  2026-03-08-incremental-autonomy-delegation-plan.md  2026-03-20-completion-layer.md
docs/security/: hardening-checklist.md  threat-model.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.e2e.test.jsx  App.jsx  styles.css
scripts/: dev-up.ps1  dev-up.sh  lint-touched.ps1  lint-touched.sh  prod-up.ps1  prod-up.sh  release-smoke.py
setup/: setup.py
src/continuity_core/: __init__.py  config.py  event_log.py
src/continuity_core/context/: __init__.py  composer.py  gather.py  pipeline.py
src/continuity_core/graph/: __init__.py  canonical_schema.py
src/continuity_core/ingest/: __init__.py  chunker.py  cli.py  loaders.py  pipeline.py
src/continuity_core/mcp/: __init__.py  server.py
src/continuity_core/memory/: __init__.py  consolidation.py  decay.py  embeddings.py  gates.py  stores.py  system.py
src/continuity_core/mra/: __init__.py  pipeline.py  resolver.py  stress.py  voids.py
src/nexus/: __init__.py  __main__.py  bot.py  config.py  setup_web.py
src/nexus_api/: __init__.py  __main__.py  adapters.py  adaptive_planner.py  app.py  auth.py  bootstrap.py  config.py  db.py  external_tools.py  migrator.py  model_router.py  models.py  repository.py  schemas.py  service.py  synthesis_bridge.py
src/nexus_core/: __init__.py  adapters.py  engine.py  events.py  models.py  planner.py  policy.py  skills.py  verification.py
src/nexus_discord_bridge/: __init__.py  __main__.py  adapter.py  service.py
src/nexus_sandbox_runner/: __init__.py  __main__.py  app.py  executors.py
tests/: conftest.py  test_c2_client.py  test_c2_embeddings.py  test_c2_engine.py  test_c2_events_read.py  test_c2_status.py  test_channel_router.py  test_config.py  test_consensus.py  test_conversation.py  test_curiosity_discussion.py  test_discord_bridge.py  test_graph.py  test_guardrails.py  test_memory_store.py  test_nexus_api_adaptive_planner.py  test_nexus_api_app.py  test_nexus_api_auth.py  test_nexus_api_bootstrap.py  test_nexus_api_external_tools.py  test_nexus_core_adapters.py  test_nexus_core_engine.py  test_nexus_core_planner.py  test_nexus_core_policy.py  test_nexus_core_skills.py  test_nexus_core_verification.py  test_pieces_parsing.py  test_prompts.py  test_resolver.py  test_sandbox_executors.py  test_sandbox_runner_service.py  test_sentiment.py  test_synthesis_models.py  test_synthesis_sandbox.py  test_synthesis_validator.py  test_tdd_engine.py
(+71 files in other folders)
